category end points added, pagination added
