# internal/api/category.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Category category
+//
+// swagger:model Category
+type Category struct {
+
+	// is active
+	IsActive bool `json:"isActive,omitempty"`
+
+	// is deleted
+	IsDeleted bool `json:"isDeleted,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+}
+
+// Validate validates this category
+func (m *Category) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this category based on context it is used
+func (m *Category) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Category) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Category) UnmarshalBinary(b []byte) error {
+	var res Category
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
